--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
     --vt-c-white: #ffffff;
-    --vt-c-white-soft: #f8f8f8;
+    --vt-c-white-soft: #b2b2b2;
     --vt-c-white-mute: #f2f2f2;
 
     --vt-c-black: #181818;
