adjust primary light color

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,7 +23,7 @@
 
 :root {
     --c-primary-black: #1b6611;
-    --c-primary-light: #a2d27a;
+    --c-primary-light: #52822a;
 }
 
 /* semantic color variables for this project */
