--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,3 +12,10 @@ a {
     text-decoration: none;
     color: unset;
 }
+
+input[type="text"] {
+    font-size: 2.3rem;
+    border: 4px solid black;
+    border-radius: 15px;
+    padding: 10px;
+}
