--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,9 +13,11 @@ a {
     color: unset;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="number"] {
     font-size: 2.3rem;
     border: 4px solid black;
     border-radius: 15px;
     padding: 10px;
+    appearance: textfield;
 }
