--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,3 +21,10 @@ input[type="number"] {
     padding: 10px;
     appearance: textfield;
 }
+
+select {
+    font-size: 1.3rem;
+    border: 4px solid black;
+    border-radius: 15px;
+    padding: 10px;
+}
