--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,7 +14,8 @@ a {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+textarea {
     font-size: 2.3rem;
     border: 4px solid black;
     border-radius: 15px;
